queue is correctly aligned but title and subtitle are not

--- a/static/styles.css
+++ b/static/styles.css
@@ -14,20 +14,20 @@ body {
     position: relative;
 }
 
-.flex-container2 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
 /* Second subtitle aligned to top-left within the flex container */
 .text-left {
     align-self: flex-start;
     max-width: 50%;
 }
 
+.flex-container2 {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
 .track-queue-container {
-    align-self: flex-start;
+    background-color: rgba(255, 0, 0, 0.1);
     text-align: left;
     max-width: 50%;
 }
@@ -38,7 +38,7 @@ body {
 
 /* Title and subtitle aligned to the right */
 .text-right {
-    align-self: flex-end;
+    background-color: rgba(0, 0, 255, 0.1);
     max-width: 50%;
     text-align: right;
 }
